--- a/styles.css
+++ b/styles.css
@@ -20,12 +20,22 @@ img {
   margin: 20px 0;
 }
 
+p {
+  color: black;
+}
+
+#main {
+  padding: 100px 0;
+}
+
 .item {
   position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin: 30px 0;
+  opacity: 0.5;
 }
 
 .haiku {
@@ -35,6 +45,10 @@ img {
   padding: 40px;
   border-radius: 5px;
   box-shadow: 0 0 10px rgb(0 0 0 / 20%);
+}
+
+.haiku p {
+  opacity: 0;
 }
 
 .caption {
